layouts: remove cssmenu. Add out-of-date warning

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -8,45 +8,7 @@
   </head>
   <body>
     <div id="cssmenu">
-      <ul class="pureCssMenu pureCssMenum">
-        <li class="pureCssMenui"><a class="pureCssMenui" href="/index.html">Trang đầu</a></li>
-        <li class="pureCssMenui"><a class="pureCssMenui" href="#"><span>Người dùng</span><![if gt IE 6]></a><![endif]><!--[if lte IE 6]><table><tr><td><![endif]-->
-        <ul class="pureCssMenum">
-          <li class="pureCssMenui"><a class="pureCssMenui" href="/vn/news/">Tin tức</a></li>
-          <li class="pureCssMenui"><a class="pureCssMenui" href="/vn/members/">Thành viên</a></li>
-          <li class="pureCssMenui"><a class="pureCssMenui" href="/~huy/">&nbsp; » Huy</a></li>
-          <li class="pureCssMenui"><a class="pureCssMenui" href="/~n0b0dy/">&nbsp; » Sang</a></li>
-          <li class="pureCssMenui"><a class="pureCssMenui" href="/~redlotus/">&nbsp; » Doan</a></li>
-          <li class="pureCssMenui"><a class="pureCssMenui" href="/doc/">Tài liệu</a></li>
-          <li class="pureCssMenui"><a class="pureCssMenui" href="/faq/">FAQ</a></li>
-        </ul>
-        <!--[if lte IE 6]></td></tr></table></a><![endif]--></li>
-        <li class="pureCssMenui"><a class="pureCssMenui" href="#"><span>Kết nối</span><![if gt IE 6]></a><![endif]><!--[if lte IE 6]><table><tr><td><![endif]-->
-        <ul class="pureCssMenum">
-          <li class="pureCssMenui"><a class="pureCssMenui" href="/vn/lists/">Nhóm thư</a></li>
-          <li class="pureCssMenui"><a class="pureCssMenui" href="/vn/irc/">Kênh IRC</a></li>
-          <li class="pureCssMenui"><a class="pureCssMenui" href="/vn/skype/">Nhóm Skype</a></li>
-          <li class="pureCssMenui"><a class="pureCssMenui" href="https://twitter.com/archlinuxvn">Twitter</a></li>
-          <li class="pureCssMenui"><a class="pureCssMenui" href="/vn/facebook/">Facebook</a></li>
-          <li class="pureCssMenui"><a class="pureCssMenui" href="https://facebook.com/groups/archlinuxvn/">&nbsp; » Group</a></li>
-          <li class="pureCssMenui"><a class="pureCssMenui" href="https://facebook.com/archlinuxvn/">&nbsp; » Fanpage</a></li>
-        </ul>
-        <!--[if lte IE 6]></td></tr></table></a><![endif]--></li>
-        <li class="pureCssMenui"><a class="pureCssMenui" href="/security/">Security</a></li>
-        <li class="pureCssMenui"><a class="pureCssMenui" href="#"><span>Tiện ích</span><![if gt IE 6]></a><![endif]><!--[if lte IE 6]><table><tr><td><![endif]-->
-        <ul class="pureCssMenum">
-          <li class="pureCssMenui"><a class="pureCssMenui" href="/tags/">Thẻ</a></li>
-          <li class="pureCssMenui"><a class="pureCssMenui" href="/changes/">Thay đổi</a></li>
-          <li class="pureCssMenui"><a class="pureCssMenui" href="http://github.com/archlinuxvn/">Mã nguồn</a></li>
-        </ul>
-        <!--[if lte IE 6]></td></tr></table></a><![endif]--></li>
-        <li class="pureCssMenui"><a class="pureCssMenui" href="#"><span>Mirror</span><![if gt IE 6]></a><![endif]><!--[if lte IE 6]><table><tr><td><![endif]-->
-        <ul class="pureCssMenum">
-          <li class="pureCssMenui"><a class="pureCssMenui" href="http://archlinuxvn.tuxfamily.org<%= @item.identifier %>">Pháp</a></li>
-          <li class="pureCssMenui"><a class="pureCssMenui" href="http://archlinuxvn.org<%= @item.identifier %>">Singapore</a></li>
-        </ul>
-        <!--[if lte IE 6]></td></tr></table></a><![endif]--></li>
-      </ul>
+      Trang này đã lâu không được cập nhật!
     </div>
 
     <div id="main">
