layouts: Update style of warning

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <div id="cssmenu">
-      Trang này đã lâu không được cập nhật!
+      <p style="padding: 3px;">
+        <strong>Cảnh báo: Trang này đã lâu không được cập nhật!</strong>
+      </p>
     </div>
 
     <div id="main">
